# mondne

./: README.md  codegen.py  pyproject.toml
src/mondne/: __init__.py  custom_fields.py  custom_mutations.py  custom_queries.py  custom_typing_fields.py  enums.py  input_types.py
